--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,6 @@ dependencies {
     implementation('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true }
     implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
+    implementation 'com.android.support:exifinterface:28.0.0'
     implementation project(':kprogresshud')
 }
