--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.app.l_pesa">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -26,25 +25,22 @@
         android:xlargeScreens="true" />
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-        <!--android:usesCleartextTraffic="true"-->
-
-        <!-- android:networkSecurityConfig="@xml/network_security_config"-->
-
-        <activity android:name=".calculator.view.LoanCalculatorActivity"
+        <!-- android:usesCleartextTraffic="true" -->
+        <!-- android:networkSecurityConfig="@xml/network_security_config" -->
+        <activity
+            android:name=".calculator.view.LoanCalculatorActivity"
             android:label="@string/calculate_your_loan"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"
-
-            />
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".help.view.HelpActivity"
             android:label="@string/help_support"
@@ -176,11 +172,14 @@
             android:name=".splash.view.SplashActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden">
-          <!-- <intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".main.view.MainActivity"
@@ -194,29 +193,24 @@
             android:name=".registration.view.RegistrationStepOneActivity"
             android:label="@string/continue_to_register"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            >
-
-
-
-        </activity>
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".registration.view.RegistrationStepTwoActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysHidden"
-
-            >
-
+            android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".registration.view.RegistrationStepThreeActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".registration.view.RegistrationStepFourActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
         <activity
@@ -226,13 +220,15 @@
         <activity
             android:name=".dashboard.view.DashboardActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden">
 
-     <!--       <intent-filter>
+            <!--
+                <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
 
         </activity>
         <activity
