--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,7 +174,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden">
 
-            <intent-filter>
+           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -199,6 +199,12 @@
             android:label="@string/registration_step_two"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden">
+
+            <!--<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
 
         </activity>
         <activity
