--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -187,6 +187,7 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".login.view.LoginActivity"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible" />
         <activity
