--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,15 @@ android {
         javaMaxHeapSize "4g"
     }
 
+    android {
+        lintOptions {
+            checkReleaseBuilds false
+            // Or, if you prefer, you can continue to check for errors in release builds,
+            // but continue the build even when errors are found:
+            abortOnError false
+        }
+    }
+
 }
 
 dependencies {
