--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,13 +98,14 @@ dependencies {
     }
     implementation 'io.fotoapparat:fotoapparat:2.7.0'
     implementation 'id.zelory:compressor:2.1.0'
-    implementation 'com.google.firebase:firebase-messaging:19.0.1'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true }
     implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.google.android.play:core:1.6.1'
+    implementation 'com.google.android.play:core:1.6.3'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     /* implementation 'com.amazonaws:aws-android-sdk-s3:2.13.5'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.13.5'*/
 
