--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles 'proguard-rules.pro'
-            debuggable true
+           /* debuggable true*/
             signingConfig signingConfigs.config
             proguardFile '/home/amiyo/AndroidProject/L_Pesa/l-pesa/app/proguard-rules.pro'
             buildConfigField("String", 'AWS_PULL', '"eu-central-1:a50ad0e2-bed2-42dc-a6b1-8f225f37f5f3"')
@@ -104,7 +104,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.play:core:1.6.3'
     implementation 'com.facebook.android:facebook-android-sdk:5.5.1'
-    implementation 'com.karumi:dexter:4.2.0'
+    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
     /* implementation 'com.amazonaws:aws-android-sdk-s3:2.13.5'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.13.5'*/
 
