--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,7 +105,7 @@ dependencies {
     implementation 'com.google.android.play:core:1.6.3'
     implementation 'com.facebook.android:facebook-android-sdk:5.5.1'
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
-    /*implementation 'com.google.firebase:firebase-analytics:17.2.0'*/
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
     /* implementation 'com.amazonaws:aws-android-sdk-s3:2.13.5'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.13.5'*/
 
