--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 02 11:02:26 IST 2019
-sdk.dir=/root/Android/Sdk
-
+#Fri Nov 15 08:26:40 IST 2019
+sdk.dir=/home/amiyo/Android/Sdk
