--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "com.app.l_pesa"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 11
-        versionName "1.0.11"
+        versionCode 10
+        versionName "1.0.10"
 
     }
     buildTypes {
@@ -106,7 +106,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:5.5.1'
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
-    implementation 'com.github.javiersantos:AppUpdater:2.7'
+   /* implementation 'com.github.javiersantos:AppUpdater:2.7'*/
     /* implementation 'com.amazonaws:aws-android-sdk-s3:2.13.5'
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.13.5'*/
 
