--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,10 @@ android {
         config {
             keyAlias 'android'
             keyPassword 'android'
-            storeFile file('/home/cx-26/Sudipto/AndroidProject/NEW PROJECT/LPesa/l-pesa/app/KEY/lpesa.jks')
+            //storeFile file('/home/cx-26/Sudipto/AndroidProject/NEW PROJECT/LPesa/l-pesa/app/KEY/lpesa.jks')
             //storeFile file('/home/amiyo/AndroidProject/Office/L-Pesa Intellij/l-pesa/app/KEY/lpesa.jks')
             storePassword 'android'
+            storeFile file('/home/cx-26/Sudipto/AndroidProject/Projects/LPesa/l-pesa/app/KEY/lpesa.jks')
         }
     }
     compileSdkVersion 29
